--- a/login_page.html
+++ b/login_page.html
@@ -26,7 +26,7 @@
             </div>
             <button type="button " class="btn " value="Sign in ">Sign In
             </button>
-            <a class="rg" type="button " href="https://ryanzmr.github.io/A2_Rg_page.github.io/Registration.html" target="_blank">Register Here</a>
+            <a class="rg" type="button " href="#" target="_blank">Register Here</a>
         </form>
 
     </div>
